# kinguard-utils

./: .gitignore  CMakeLists.txt  Config.h.in  reset-notifiers.opi-c.completed  sysconfigWrapper.php
debian/: .gitignore  changelog  control  files  kinguard-utils.dirs  kinguard-utils.install  kinguard-utils.links  kinguard-utils.postinst  kinguard-utils.postrm  rules
include/: kgp-utils.h
notifier/: kgpNotifier.cpp  kgpNotifier.h
phptest/: testConfigValue.php
sysinfo/: kgpSysinfo.cpp  kgpSysinfo.h
test/: CMakeLists.txt  TestConfig.cpp  TestConfig.h  TestNotifier.cpp  TestNotifier.h  TestSysInfo.cpp  TestSysInfo.h  sysconfig.json
